# worksquad.ru

./: .gitignore  LICENSE  README.md  docker-compose.yaml
backend/: Dockerfile  README.md  alembic.ini  alembic_migrations.sh  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4d80a654ef84_init_user_schema.py
backend/app/: admin.py  main.py
backend/app/api/: dependecies.py  routes.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: aura.py
backend/app/services/: aura_service.py
nginx/: nginx.conf  start.sh
