[project]
name = "worksquad.ru"
version = "0.1.0"
description = "worksquad.ru api"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "psycopg2-binary>=2.9.11",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
